// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package openpitrix.drone;

option go_package = "openpitrix.io/openpitrix/pkg/pb/drone;pbdrone";

import "openpitrix/types/types.proto";
import "openpitrix/types/confd.proto";
import "openpitrix/types/drone.proto";
import "openpitrix/types/frontgate.proto";

service DroneService {
	rpc GetDroneConfig (openpitrix.types.Empty) returns (openpitrix.types.DroneConfig);
	rpc SetDroneConfig (openpitrix.types.DroneConfig) returns (openpitrix.types.Empty);

	rpc GetConfdConfig (openpitrix.types.Empty) returns (openpitrix.types.ConfdConfig);
	rpc SetConfdConfig (openpitrix.types.ConfdConfig) returns (openpitrix.types.Empty);

	rpc GetFrontgateConfig (openpitrix.types.Empty) returns (openpitrix.types.FrontgateConfig);
	rpc SetFrontgateConfig (openpitrix.types.FrontgateConfig) returns (openpitrix.types.Empty);

	rpc IsConfdRunning (openpitrix.types.Empty) returns (openpitrix.types.Bool);
	rpc StartConfd (openpitrix.types.Empty) returns (openpitrix.types.Empty);
	rpc StopConfd (openpitrix.types.Empty) returns (openpitrix.types.Empty);

	rpc GetTemplateFiles (openpitrix.types.Empty) returns (openpitrix.types.StringList);
	rpc GetValues (openpitrix.types.StringList) returns (openpitrix.types.StringMap);

	rpc PingPilot (openpitrix.types.FrontgateEndpoint) returns (openpitrix.types.Empty);
	rpc PingFrontgate (openpitrix.types.FrontgateEndpoint) returns (openpitrix.types.Empty);
	rpc PingDrone (openpitrix.types.Empty) returns (openpitrix.types.Empty);
}
